# BundleSDF

./: CMakeLists.txt  build.sh  build_ros_package.sh  bundlesdf.py  bundlesdf_original.py  config.yml  create-masks-dir-symlink.sh  gui.py  package.xml  pose_tracker.py  readme.md  run-bsdf-on-frames.sh  run_custom.py  run_pose_only_bsdf.py  run_ros_node.py  run_ros_node_full.py
BundleTrack/: config_ho3d.yml
BundleTrack/scripts/: data_reader.py
BundleTrack/src/: Bundler.cpp  Frame.cpp
docker/: README.md  build_docker_image.sh  docker-compose.yml  enter_docker.sh  run_container.sh  start_docker.sh  stop_docker.sh
launch/: bundlesdf.launch
my_utils/: config_manager.py  data_collection_node.py  frame_processor.py  image_publisher.py
