<?xml version="1.0"?>
<package format="2">
  <name>my_ros_package</name>
  <version>0.0.1</version>
  <description>ROS package for BundleSDF and data collection</description>
  <maintainer email="jishnu@utdallas.edu">Jishnu P</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>message_filters</depend>
</package>
